# fly-memory

./: .gitignore  DESIGN.md  README.md  pyproject.toml
flym/: __init__.py  __main__.py  cache.py  chunker.py  chunker_code.py  chunker_test.py  collections.py  config.py  db.py  indexer.py  ingestion.py  vault.py
flym/cli/: __init__.py  add.py  collections.py  index.py  remove.py  search.py  watch.py
flym/providers/: __init__.py  base.py  ollama.py
flym/search/: __init__.py  bm25.py  expansion.py  hybrid.py  pipeline.py  rerank.py  vector.py
