[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flym"
version = "0.1.0"
description = "A lightweight personal document base CLI"
requires-python = ">=3.11"
dependencies = [
    # Module 1 — scaffold
    "click>=8.0",
    "pydantic>=2.0",

    # Module 2 — ingestion
    "python-frontmatter>=1.0",

    # Module 4 — providers
    "ollama>=0.4",

    # Module 5 — indexing (sqlite-vec loaded as an extension, not imported)
    "sqlite-vec>=0.1",

    # Module 9 — reranking
    "sentence-transformers>=3.0",

    # Module 10 — file watching
    # "watchfiles>=0.21",             # uncomment when reaching Module 10
]

[project.scripts]
flym = "flym.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["flym"]
